ACTIVITI-5557: several fixes + indentation